@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2012/03/26 13:11:15 obache Exp $
-
-SHA1 (Tie-File-0.98.tar.gz) = 75d2f6bdba0563fea8741a9f3f5b1b661dde29f6
-RMD160 (Tie-File-0.98.tar.gz) = f8549edfdee0f93f9a5fed5636c8a3b6c08f33d5
-Size (Tie-File-0.98.tar.gz) = 69921 bytes
